@@ -25,6 +25,12 @@ CAMLC=$(BEST_OCAMLC) $(STDLIBFLAGS) -g
 COMPFLAGS=$(INCLUDES) -absname -w +a-4-9-41-42-44-45-48-70 -warn-error +A \
           -safe-string -strict-sequence -strict-formats
 LINKFLAGS=-linkall -I $(UNIXDIR) -I $(DYNLINKDIR)
+ifeq "$(SUPPORTS_SHARED_LIBRARIES)" "true"
+  LINKFLAGS+=-use-prims $(ROOTDIR)/runtime/primitives \
+             -use-runtime $(RUNTIME_NAME)
+else
+  LINKFLAGS+=-custom
+endif
 OC_OCAMLDEPDIRS = $(DIRECTORIES)
 
 DIRECTORIES=$(UNIXDIR) $(DYNLINKDIR) $(addprefix $(ROOTDIR)/,\
