@@ -30,8 +30,6 @@
 #include "caml/mlvalues.h"
 #include "caml/exec.h"
 
-char * default_runtime_path = RUNTIME_NAME;
-
 #ifndef MAXPATHLEN
 #define MAXPATHLEN 1024
 #endif
@@ -155,11 +153,10 @@ static char * read_runtime_path(int fd)
     } else if (path_size > 0)
       ofs += read_size(buffer + 4);
   }
-  if (path_size == 0) return default_runtime_path;
+  if (path_size == 0) return NULL;
   if (path_size >= MAXPATHLEN) return NULL;
   lseek(fd, -ofs, SEEK_END);
   if (read(fd, runtime_path, path_size) != path_size) return NULL;
-  runtime_path[path_size - 1] = 0;
   return runtime_path;
 }
 
