@@ -26,6 +26,12 @@ val version: string
 val bindir: string
 (** The directory containing the binary programs *)
 
+val runtime_bindir: string
+(** The directory containing the runtime binaries on the target system. Usually
+    the same as {!bindir}.
+
+    @since 5.1.0 *)
+
 val standard_library: string
 (** The directory containing the standard libraries *)
 
